2017-01-21  Bernd Schmidt  <bschmidt@redhat.com>
	rtl-optimization/79125
	* cprop.c (local_cprop_pass): Handle cases where we make an
	unconditional trap.

	PR rtl-optimization/79125
	* gcc.dg/torture/pr79125.c: New test.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244741 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-21  Bernd Schmidt  <bschmidt@redhat.com>
+
+	rtl-optimization/79125
+	* cprop.c (local_cprop_pass): Handle cases where we make an
+	unconditional trap.
+
 2017-01-20  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	PR target/61729
