PR other/79046 libatomic/ 	* testsuite/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead 	of cat to get version from BASE-VER file. 	* testsuite/Makefile.in: Regenerated. libffi/ 	* configure.ac: Add GCC_BASE_VER. 	* include/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead 	of cat to get version from BASE-VER file. 	* configure: Regenerated. 	* testsuite/Makefile.in: Regenerated. 	* include/Makefile.in: Regenerated. 	* Makefile.in: Regenerated. 	* man/Makefile.in: Regenerated. libgomp/ 	* testsuite/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead 	of cat to get version from BASE-VER file. 	* testsuite/Makefile.in: Regenerated. libitm/ 	* testsuite/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead 	of cat to get version from BASE-VER file. 	* testsuite/Makefile.in: Regenerated. libmpx/ 	* mpxrt/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead 	of cat to get version from BASE-VER file. 	* mpxwrap/Makefile.am (gcc_version): Likewise. 	* mpxrt/Makefile.in: Regenerated. 	* mpxwrap/Makefile.in: Regenerated. liboffloadmic/ 	* plugin/configure.ac: Add GCC_BASE_VER. 	* plugin/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead 	of cat to get version from BASE-VER file. 	* plugin/configure: Regenerated. 	* plugin/aclocal.m4: Regenerated. 	* plugin/Makefile.in: Regenerated. libsanitizer/ 	* interception/Makefile.am (gcc_version): Use @get_gcc_base_ver@ 	instead of cat to get version from BASE-VER file. 	* asan/Makefile.am (gcc_version): Likewise. 	* ubsan/Makefile.am (gcc_version): Likewise. 	* sanitizer_common/Makefile.am (gcc_version): Likewise. 	* lsan/Makefile.am (gcc_version): Likewise. 	* tsan/Makefile.am (gcc_version): Likewise. 	* interception/Makefile.in: Regenerated. 	* asan/Makefile.in: Regenerated. 	* ubsan/Makefile.in: Regenerated. 	* sanitizer_common/Makefile.in: Regenerated. 	* lsan/Makefile.in: Regenerated. 	* tsan/Makefile.in: Regenerated. libvtv/ 	* testsuite/Makefile.am (gcc_version): Use @get_gcc_base_ver@ in

--- a/libmpx/ChangeLog
+++ b/libmpx/ChangeLog
@@ -1,3 +1,12 @@
+2017-01-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR other/79046
+	* mpxrt/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead
+	of cat to get version from BASE-VER file.
+	* mpxwrap/Makefile.am (gcc_version): Likewise.
+	* mpxrt/Makefile.in: Regenerated.
+	* mpxwrap/Makefile.in: Regenerated.
+
 2017-01-19  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/79046
