--- a/liboffloadmic/ChangeLog
+++ b/liboffloadmic/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR other/79046
+	* plugin/configure.ac: Add GCC_BASE_VER.
+	* plugin/Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead
+	of cat to get version from BASE-VER file.
+	* plugin/configure: Regenerated.
+	* plugin/aclocal.m4: Regenerated.
+	* plugin/Makefile.in: Regenerated.
+
 2017-01-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/79046
