--- a/libgcc/ChangeLog
+++ b/libgcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* config/i386/cygming-crtbegin.c (LIBGCJ_SONAME): No longer #define.
+
 2017-01-20  Jiong Wang  <jiong.wang@arm.com>
 
 	* config/aarch64/aarch64-unwind.h: Empty this file on ILP32.
