PR testsuite/79169 	* g++.dg/warn/Wduplicated-branches1.C: Use signed char.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244747 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-21  Marek Polacek  <polacek@redhat.com>
+
+	PR testsuite/79169
+	* g++.dg/warn/Wduplicated-branches1.C: Use signed char.
+
 2017-01-20  Jan Hubicka  <hubicka@ucw.cz>
 
 	* gcc.dg/tree-ssa/pr77445-2.c: Adjust template.
