PR lto/78407 	* cfg.c (update_bb_profile_for_threading): Fix updating of probablity.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244749 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-21  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR lto/78407
+	* cfg.c (update_bb_profile_for_threading): Fix updating of probablity.
+
 2017-01-21  Bernd Schmidt  <bschmidt@redhat.com>
 
 	rtl-optimization/79125
