--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* gfc-internals.texi (Symbol Versioning): Change references
+	to www.akkadia.org to https.
+
 2017-01-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.h (gfc_extract_int): Change return type to bool.  Add
