* doc/extend.texi (Thread-Local): Change www.akkadia.org reference 	to https. 	* doc/invoke.texi (Code Gen Options): Ditto.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244751 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/extend.texi (Thread-Local): Change www.akkadia.org reference
+	to https.
+	* doc/invoke.texi (Code Gen Options): Ditto.
+
 2017-01-21  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR lto/78407
