* gcc.dg/tree-ssa/pr77445-2.c: Quote brackets.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244757 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-22  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* gcc.dg/tree-ssa/pr77445-2.c: Quote brackets.
+
 2017-01-21  Marek Polacek  <polacek@redhat.com>
 
 	PR testsuite/79169
