* gcov.c (INCLUDE_ALGORITHM): Define. 	(INCLUDE_VECTOR): Define. 	No longer include <vector> and <algorithm> directly.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244758 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-22  Dimitry Andric <dim@FreeBSD.org>
+
+	* gcov.c (INCLUDE_ALGORITHM): Define.
+	(INCLUDE_VECTOR): Define.
+	No longer include <vector> and <algorithm> directly.
+	
 2017-01-21  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* doc/extend.texi (Thread-Local): Change www.akkadia.org reference
