--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-22  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* README.Portability: Remove note on an Irix compatibility issue.
+
 2017-01-22  Dimitry Andric <dim@FreeBSD.org>
 
 	* gcov.c (INCLUDE_ALGORITHM): Define.
