--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/79154
+	* gfortran.dg/gomp/pr79154-1.f90: New test.
+	* gfortran.dg/gomp/pr79154-2.f90: New test.
+
 2017-01-22  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* gcc.dg/tree-ssa/pr77445-2.c: Quote brackets.
