--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-22  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* warn_summary: Remove the -java option.
+
 2017-01-20  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* update-copyright.py (LibJavaFilter): Remove.
