* doc/xml/manual/debug.xml: code.google.com uses https now.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244770 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-22  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* doc/xml/manual/debug.xml: code.google.com uses https now.
+
+2017-01-22  Gerald Pfeifer  <gerald@pfeifer.com>
+	
 	* doc/xml/manual/test.xml: Fix link into gccint online manual.
 
 2017-01-21  Ville Voutilainen  <ville.voutilainen@gmail.com>
