* patch_tester.sh (TESTLOGS): Remove 	$TARGET/libjava/testsuite/libjava.sum.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244771 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-23  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* patch_tester.sh (TESTLOGS): Remove
+	$TARGET/libjava/testsuite/libjava.sum.
+
 2017-01-22  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* warn_summary: Remove the -java option.
